# plotador

./: README.md  pyproject.toml
src/: asd.py  axes.py  categorical.py  config.py  data.py  file_monitor.py  file_picker.py  files.py  histogram.py  line.py  loading.py  main.py  plot.py  scatter.py  temp.py
src/Plotador.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
